--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -44,7 +44,7 @@
         </div>
         <div class="form-row">
             <div class="form-group col-lg-8">
-                {{ form.submit(class="btn btn-md btn-primary") }}
+                {{ form.submit(class="btn btn-md btn-buttons") }}
             </div>
         </div>
     </form>
