--- a/app/templates/del_post.html
+++ b/app/templates/del_post.html
@@ -39,7 +39,7 @@
         </table>
         <hr />
         <div class="form-group">
-            {{ form.submit(class="btn btn-md btn-primary") }}
+            {{ form.submit(class="btn btn-md btn-buttons") }}
         </div>
     </form>
 </div>
