--- a/app/templates/del_tag.html
+++ b/app/templates/del_tag.html
@@ -9,7 +9,7 @@
         {{ form.csrf_token }}
         <p>Are you sure you want to delete the tag <strong>{{ tag.name }}</strong>?</p>
         <div class="form-group">
-            {{ form.submit(class="btn btn-md btn-primary") }}
+            {{ form.submit(class="btn btn-md btn-buttons") }}
         </div>
     </form>
 </div>
