--- a/app/templates/edit_post.html
+++ b/app/templates/edit_post.html
@@ -35,7 +35,7 @@
             {{ form.tags(class="form-control") }}
         </div>
         <div class="form-group">
-            {{ form.submit(class="btn btn-md btn-primary") }}
+            {{ form.submit(class="btn btn-md btn-buttons") }}
         </div>
     </form>
 </div>
