--- a/app/templates/edit_tag.html
+++ b/app/templates/edit_tag.html
@@ -16,7 +16,7 @@
             {{ form.tag_name(class="form-control") }}
         </div>
         <div class="form-group">
-            {{ form.submit(class="btn btn-md btn-primary") }}
+            {{ form.submit(class="btn btn-md btn-buttons") }}
         </div>
     </form>
 </div>
