--- a/app/templates/post_det.html
+++ b/app/templates/post_det.html
@@ -76,7 +76,7 @@
             </div>
         </div>
         <div class="form-group">
-            {{ form.submit(class="btn btn-md btn-primary") }}
+            {{ form.submit(class="btn btn-md btn-buttons") }}
         </div>
     </form>
 </div>
