--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -62,7 +62,7 @@
         </div>
         <div class="form-row">
             <div class="form-group col-lg-6">
-                {{ form.submit(class="btn btn-md btn-primary") }}
+                {{ form.submit(class="btn btn-md btn-buttons") }}
             </div>
         </div>
     </form>
