--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -107,8 +107,20 @@
 
         <div class="container-fluid bg-dark">
             <div class="row">
-                <div class="col-12 p-5">
-                    <div class="d-flex justify-content-center text-white"><small>&#169; 2019 kevin7.net</small></div>
+                <div class="col-12 pt-5">
+                    <div class="d-flex justify-content-center text-white">
+                        <a href="https://github.com/Kevinf7" target="_blank"
+                        class="fab fa-github fa-2x text-light"
+                        style="text-decoration:none">
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 pt-1 pb-5">
+                    <div class="d-flex justify-content-center text-white">
+                        <small>&#169; 2019 kevin7.net</small>
+                    </div>
                 </div>
             </div>
         </div>
