--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,7 +15,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        <link rel="stylesheet" href="{{ url_for('static', filename='fontawesome/css/all.min.css') }}" type="text/css" >
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
         <link rel="stylesheet" href="{{ url_for('static', filename='css/app.css') }}" type="text/css">
         <link rel="stylesheet" href="{{ url_for('static', filename='css/custom.css') }}" type="text/css">
         <style>
