--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -25,12 +25,15 @@
             </div>
         </div>
         <div class="form-row">
-            <div class="form-group custom-control custom-checkbox">
-                {{ form.remember_me(class="custom-control-input") }} {{ form.remember_me.label(class="custom-control-label") }}
+            <div class="form-group">
+                <div class="form-check custom-control custom-checkbox">
+                    {{ form.remember_me(class="custom-control-input") }}
+                    {{ form.remember_me.label(class="custom-control-label") }}
+                </div>
             </div>
         </div>
         <div class="form-row">
-            <div class="form-group col-lg-6">
+            <div class="form-group col-lg-8">
                 {{ form.submit(class="btn btn-md btn-buttons") }}
             </div>
         </div>
