--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -55,10 +55,11 @@
                             {% if current_user.is_anonymous %}
                                 <li class="nav-item"><a class="nav-link" href="{{ url_for('login') }}">Login</a></li>
                             {% else %}
+                                <li class="nav-item"><a class="nav-link" href="{{ url_for('logout') }}">Logout</a></li>
                                 {% if current_user.is_admin() %}
                                     <li class="nav-item dropdown">
                                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                          Admin
+                                          <i class="fas fa-wrench"></i>Admin
                                         </a>
                                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                             <a class="dropdown-item" href="{{ url_for('add_post') }}">Add Post</a>
@@ -68,7 +69,6 @@
                                         </div>
                                     </li>
                                 {% endif %}
-                                <li class="nav-item"><a class="nav-link" href="{{ url_for('logout') }}">Logout</a></li>
                             {% endif %}
                         </ul>
 
