--- a/app/templates/post_det.html
+++ b/app/templates/post_det.html
@@ -13,10 +13,16 @@
     <p><small>Written by {{ post.author.firstname }} {{ post.author.lastname }} on {{ moment(post.create_date).format('DD/MM/YYYY') }}</small></p>
     <p>{{ post.post|safe }}</p>
     {% if post.getTagNames() %}
-        <p>
+        <p><small class="text-muted">Tags:</small>
             {% for tag_name in post.getTagNames() %}
                 <a href="{{ url_for('index',tag=tag_name) }}" class="btn btn-tags btn-xs" role="button">{{ tag_name }}</a>
             {% endfor %}
+        </p>
+    {% endif %}
+    {% if current_user.is_authenticated and current_user == post.author %}
+        <p>
+        <a href="{{ url_for('edit_post',id=post.id) }}" class="btn btn-admin btn-xs" role="button"/>edit</a>
+        <a href="{{ url_for('del_post',id=post.id) }}" class="btn btn-admin btn-xs" role="button"/>delete</a>
         </p>
     {% endif %}
     <hr/>
