--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -65,7 +65,7 @@
                                             <a class="dropdown-item" href="{{ url_for('add_post') }}">Add Post</a>
                                             <a class="dropdown-item" href="{{ url_for('manage_messages') }}">Manage Messages</a>
                                             <a class="dropdown-item" href="{{ url_for('manage_tags') }}">Manage Tags</a>
-                                            <a class="dropdown-item" href="#">Manage Page Banner</a>
+                                            <a class="dropdown-item" href="{{ url_for('manage_images') }}">Manage Uploaded Images</a>
                                         </div>
                                     </li>
                                 {% endif %}
