--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -25,7 +25,7 @@
             </div>
         </div>
         <div class="form-row">
-            <div class="form-group">
+            <div class="form-group col-lg-8">
                 <div class="form-check custom-control custom-checkbox">
                     {{ form.remember_me(class="custom-control-input") }}
                     {{ form.remember_me.label(class="custom-control-label") }}
