--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,12 +1,6 @@
 {% extends "base.html" %}
 {% block title %}Home{% endblock %}
 
-{% block scripts %}
-    {{ super() }}
-    {{ moment.include_jquery() }}
-    {{ moment.include_moment() }}
-{% endblock %}
-
 {% block app_content %}
 <div class="col-md-10">
     {% for post in posts.items %}
@@ -76,7 +70,7 @@
 
 <div class="col-md-2">
     <div class="row">
-        <div class="col-12 m-2 p-2 bg-side_panel border">
+        <div class="col-12 p-2 bg-side_panel">
             <h5>Tags</h5>
             {% for tag_tup in tag_list %}
                 <a href="{{ url_for('index',tag=tag_tup[0].name) }}">{{ tag_tup[0].name }}</a> ({{ tag_tup[1] }})<br/>
@@ -92,4 +86,9 @@
     </div>
     -->
 </div>
+{% endblock %}
+
+{% block scripts %}
+    {{ super() }}
+    {{ moment.include_moment() }}
 {% endblock %}
