--- a/app/templates/manage_images.html
+++ b/app/templates/manage_images.html
@@ -1,28 +1,6 @@
 {% extends "base.html" %}
 {% block title %}Manage Images{% endblock %}
 
-{% block scripts %}
-    {{ super() }}
-    {{ moment.include_jquery() }}
-    {{ moment.include_moment() }}
-
-    <!--
-    <script>
-        document.getElementById("copyButton").addEventListener("click", function() {
-            copyToClipboard(document.getElementById("copyTarget"));
-        });
-
-        function copyToClipboard(element) {
-            var $temp = $("<input>");
-            $("body").append($temp);
-            $temp.val($(element).text()).select();
-            document.execCommand("copy");
-            $temp.remove();
-        }
-    </script>
-    -->
-{% endblock %}
-
 {% block app_content %}
 <h1>Manage Images</h1>
 
@@ -35,8 +13,10 @@
             {% endif %}
                 <td>
                     <img src="{{ url_for('static',filename='uploads/thumbnails/' ~ img.thumbnail) }}"><br/>
-                    <small class="text-muted" id="file_path">../static/uploads/{{ img.filename }}</small>
-                    <a href="{{ url_for('del_image',id=img.id) }}" class="far fa-clipboard fa-sm text-admin"></a><br/>
+                    <small class="text-muted" id="filepath-{{ loop.index }}">../static/uploads/{{ img.filename }}</small>
+                    <span class="clipboard" id="{{ loop.index }}">
+                        <a href="#" class="far fa-clipboard fa-sm text-admin cliplink"></a>
+                    </span><br/>
                     <small class="text-muted">{{ img.file_width }}x{{ img.file_height }}</small><br/>
                     <small class="text-muted">{{ img.file_size }} bytes</small><br/>
                     <small class="text-muted">Uploaded: {{ moment(img.create_date).format('DD/MM/YY') }}</small>
@@ -54,4 +34,9 @@
     </tbody></table>
     </div>
 </div>
+{% endblock %}
+
+{% block scripts %}
+    {{ super() }}
+    {{ moment.include_moment() }}
 {% endblock %}
