--- a/app/templates/manage_tags.html
+++ b/app/templates/manage_tags.html
@@ -21,7 +21,7 @@
                 <tbody>
                     {% for tu in tag_used %}
                         <tr class="d-flex">
-                            <th scope="row" class="col-4">{{ tu.name }}</th>
+                            <td scope="row" class="col-4">{{ tu.name }}</td>
                             <td class="col-8"><a href="{{ url_for('edit_tag',id=tu.id) }}" class="btn btn-admin btn-sm" role="button">Edit</a></td>
                         </tr>
                     {% endfor %}
@@ -34,7 +34,7 @@
                 <tbody>
                     {% for tnu in tag_notused %}
                         <tr class="d-flex">
-                            <th scope="row" class="col-4">{{ tnu.name }}</th>
+                            <td scope="row" class="col-4">{{ tnu.name }}</td>
                             <td class="col-8"><a href="{{ url_for('edit_tag',id=tnu.id) }}" class="btn btn-admin btn-sm" role="button">Edit</a>
                             <a href="{{ url_for('del_tag',id=tnu.id) }}" class="btn btn-admin btn-sm" role="button">Delete</a></td>
                         </tr>
