--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,14 +7,10 @@
         <title>{% block title %}{% endblock %}</title>
         <!-- CSS -->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap_custom.css') }}" type="text/css">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/prism.css') }}" type="text/css">
         <link rel="stylesheet" href="{{ url_for('static', filename='css/app.css') }}" type="text/css">
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/custom.css') }}" type="text/css">
-        <style>
-            #jumbo {
-                background-image: url("{{ url_for('static',filename='images/wm.jpg') }}")
-            }
-        </style>
-        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <!-- Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-139072308-1"></script>
         <script>
           window.dataLayer = window.dataLayer || [];
@@ -121,6 +117,7 @@
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        <script src="{{ url_for('static',filename='js/prism.js') }}"></script>
         <script src="{{ url_for('static',filename='js/app.js') }}"></script>
         <!--Custom Javascript-->
         {% block scripts %}
