--- a/app/templates/_tinymce.html
+++ b/app/templates/_tinymce.html
@@ -5,13 +5,20 @@
     plugins: [
       'advlist autolink link image imagetools lists charmap print preview hr anchor pagebreak spellchecker',
       'searchreplace wordcount visualblocks visualchars code fullscreen insertdatetime media nonbreaking',
-      'save table contextmenu directionality template paste textcolor'
+      'save table contextmenu directionality template paste textcolor codesample'
     ],
     imagetools_toolbar: "rotateleft rotateright | flipv fliph | editimage imageoptions",
-    toolbar: 'insertfile undo redo | styleselect | bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | link image | print preview media fullpage | forecolor backcolor emoticons',
+    toolbar: 'insertfile undo redo | styleselect | bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | link image | print preview media fullpage | forecolor backcolor emoticons | codesample',
     images_upload_url: '{{ url_for('imageuploader') }}',
     automatic_uploads: true,
     images_reuse_filename: false,
-    images_upload_base_path: '/static/uploads'
+    images_upload_base_path: '/static/uploads',
+    codesample_languages: [
+      {text: 'HTML/XML', value: 'markup'},
+      {text: 'JavaScript', value: 'javascript'},
+      {text: 'CSS', value: 'css'},
+      {text: 'Processing', value: 'processing'},
+      {text: 'Python', value: 'python'}
+    ]
     });
 </script>
