--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block nav_login %}active{% endblock %}
 {% block title %}Login{% endblock %}
 
 {% block app_content %}
