--- a/app/templates/post_det.html
+++ b/app/templates/post_det.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block nav_home %}active{% endblock %}
 {% block title %}Post Detail{% endblock %}
 
 {% block app_content %}
