--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block nav_about %}active{% endblock %}
 {% block title %}About Me{% endblock %}
 
 {% block app_content %}
