--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -40,15 +40,15 @@
                     </button>
                     <div class="collapse navbar-collapse justify-content-between" id="mainNav">
                         <ul class="navbar-nav">
-                            <li class="nav-item"><a class="nav-link" href="{{ url_for('index') }}">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="{{ url_for('about') }}">About</a></li>
-                            <li class="nav-item"><a class="nav-link" href="{{ url_for('contact') }}">Contact</a></li>
+                            <li class="nav-item {% block nav_home %}{% endblock %}"><a class="nav-link" href="{{ url_for('index') }}">Home</a></li>
+                            <li class="nav-item {% block nav_about %}{% endblock %}"><a class="nav-link" href="{{ url_for('about') }}">About</a></li>
+                            <li class="nav-item {% block nav_contact %}{% endblock %}"><a class="nav-link" href="{{ url_for('contact') }}">Contact</a></li>
                             {% if current_user.is_anonymous %}
-                                <li class="nav-item"><a class="nav-link" href="{{ url_for('login') }}">Login</a></li>
+                                <li class="nav-item {% block nav_login %}{% endblock %}"><a class="nav-link" href="{{ url_for('login') }}">Login</a></li>
                             {% else %}
-                                <li class="nav-item"><a class="nav-link" href="{{ url_for('logout') }}">Logout</a></li>
+                                <li class="nav-item {% block nav_logout %}{% endblock %}"><a class="nav-link" href="{{ url_for('logout') }}">Logout</a></li>
                                 {% if current_user.is_admin() %}
-                                    <li class="nav-item dropdown">
+                                    <li class="nav-item dropdown {% block nav_admin %}{% endblock %}">
                                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                           <i class="fas fa-wrench"></i>Admin
                                         </a>
