--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block nav_contact %}active{% endblock %}
 {% block title %}Contact{% endblock %}
 
 {% block app_content %}
