--- a/app/templates/del_image.html
+++ b/app/templates/del_image.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block nav_admin %}active{% endblock %}
 {% block title %}Delete Image{% endblock %}
 
 {% block app_content %}
