--- a/app/templates/del_post.html
+++ b/app/templates/del_post.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block nav_admin %}active{% endblock %}
 {% block title %}Delete Post{% endblock %}
 
 {% block app_content %}
