--- a/app/templates/manage_message.html
+++ b/app/templates/manage_message.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block nav_admin %}active{% endblock %}
 {% block title %}Manage Message{% endblock %}
 
 {% block app_content %}
