--- a/app/templates/reset_password.html
+++ b/app/templates/reset_password.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block nav_login %}active{% endblock %}
 {% block title %}Reset Password{% endblock %}
 
 {% block app_content %}
