--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -3,5 +3,12 @@
 }
 
 #jumbo {
-    background-image: url("../images/wm.jpg")
+    background-image: url("../images/wm.jpg");
 }
+
+/*
+.navbar-nav>li.nav-item.active>a.nav-link {
+    border-bottom-style: solid;
+    border-bottom-width: medium;
+}
+*/
