--- a/app/templates/reset_password.html
+++ b/app/templates/reset_password.html
@@ -5,7 +5,7 @@
 {% block app_content %}
 <div class="col-12">
     <h1>Reset Password</h1>
-    <form action="{{ url_for('reset_password') }}"  method="post">
+    <form action=""  method="post">
         {{ form.csrf_token }}
         <div class="form-row">
             <div class="form-group col-lg-8">
