--- a/app/templates/manage_images.html
+++ b/app/templates/manage_images.html
@@ -8,7 +8,7 @@
 <div class="col-12 pt-4">
     <div class="table-responsive">
     <table class="table"><tbody>
-        {% for img in images %}
+        {% for img in images.items %}
             {% if loop.index0 is divisibleby 4 or loop.index0==0 %}
             <tr>
             {% endif %}
@@ -34,6 +34,48 @@
         {% endfor %}
     </tbody></table>
     </div>
+
+    {% if images.pages > 1 %}
+        <nav aria-label="posts navigation">
+          <ul class="pagination pagination-sm justify-content-left  pt-5">
+            {% if images.has_prev %}
+            <li class="page-item">
+                <a class="page-link" href="{{ url_for('manage_images', page=images.prev_num) }}">
+                    <span aria-hidden="true">&laquo;</span>
+                    <span class="sr-only">Previous</span>
+                </a>
+            </li>
+            {% endif %}
+
+            {% for page_num in images.iter_pages(left_edge=1, left_current=3, right_current=3, right_edge=1) %}
+                {% if page_num %}
+                    {% if page_num != images.page %}
+                        <li class="page-item">
+                            <span class="page-link"><a href="{{ url_for('manage_images', page=page_num) }}">{{ page_num }}</a></span>
+                        </li>
+                    {% else %}
+                        <li class="page-item active" aria-current="page">
+                            <span class="page-link">{{ page_num }}</span>
+                        </li>
+                    {% endif %}
+                {% else %}
+                    <li class="page-item">
+                        <span class="page-link">...</span>
+                    </li>
+                {% endif %}
+            {% endfor %}
+
+            {% if images.has_next %}
+            <li class="page-item">
+                <a class="page-link" href="{{ url_for('manage_images',page=images.next_num) }}">
+                    <span aria-hidden="true">&raquo;</span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </li>
+            {% endif %}
+          </ul>
+        </nav>
+    {% endif %}
 </div>
 {% endblock %}
 
