--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -54,6 +54,7 @@
                                         </a>
                                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                             <a class="dropdown-item" href="{{ url_for('add_post') }}">Add Post</a>
+                                            <a class="dropdown-item" href="{{ url_for('manage_content') }}">Manage Content</a>
                                             <a class="dropdown-item" href="{{ url_for('manage_messages') }}">Manage Messages</a>
                                             <a class="dropdown-item" href="{{ url_for('manage_tags') }}">Manage Tags</a>
                                             <a class="dropdown-item" href="{{ url_for('manage_images') }}">Manage Uploaded Images</a>
