--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -70,7 +70,7 @@
                                 <input class="btn btn-md btn-buttons" type="submit" value="Search">
                                 <i class="far fa-question-circle fa-sm pl-2 text-light"
                                 style="text-decoration:none" data-toggle="tooltip" data-placement="top"
-                                title="Search blog posts. Do not use spaces or wildcards.">
+                                title="Hint: Search for blog posts. Do not use spaces or wildcards">
                                 </i>
                             </div>
                         </form>
